--- a/public/input.css
+++ b/public/input.css
@@ -32,6 +32,6 @@
     border: 1px solid rgb(32, 59, 19);
 }
 
-.controller:hover {
+/* .controller:hover {
     background: rgb(32, 59, 19);
-}
+} */
