--- a/output.css
+++ b/output.css
@@ -708,10 +708,6 @@ video {
   display: block;
 }
 
-.inline-block {
-  display: inline-block;
-}
-
 .flex {
   display: flex;
 }
@@ -1113,10 +1109,6 @@ video {
   text-align: justify;
 }
 
-.align-middle {
-  vertical-align: middle;
-}
-
 .font-sans {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -1331,6 +1323,49 @@ video {
 /* .controller:hover {
     background: rgb(32, 59, 19);
 } */
+
+/* translator */
+
+.goog-te-banner-frame {
+  display: none !important;
+}
+
+#google_translate_element select {
+  background-color: #ffffff;
+  color: rgb(220 38 38);
+  border: none;
+  width: 115px;
+  overflow: hidden;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 6px 8px
+}
+
+.goog-logo-link {
+  display: none !important;
+}
+
+.goog-te-gadget {
+  color: transparent !important;
+}
+
+.VIpgJd-ZVi9od-l4eHX-hSRGPd {
+  display: none !important;
+}
+
+.goog-te-combo {
+  width: 202px;
+  overflow: hidden;
+  border: 1px solid #009e4d;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: #f7f7f7;
+  color: #13b95a;
+  cursor: pointer;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
 
 .placeholder\:text-gray-400::-moz-placeholder {
   --tw-text-opacity: 1;
