--- a/public/input.css
+++ b/public/input.css
@@ -35,3 +35,43 @@
 /* .controller:hover {
     background: rgb(32, 59, 19);
 } */
+
+/* translator */
+.goog-te-banner-frame {
+    display: none !important;
+}
+
+#google_translate_element select {
+    background-color: #ffffff;
+    color: rgb(220 38 38);
+    border: none;
+    width: 115px;
+    overflow: hidden;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 6px 8px
+}
+
+.goog-logo-link {
+    display: none !important;
+}
+
+.goog-te-gadget {
+    color: transparent !important;
+}
+
+.VIpgJd-ZVi9od-l4eHX-hSRGPd {
+    display: none !important;
+}
+
+.goog-te-combo {
+    width: 202px;
+    overflow: hidden;
+    border: 1px solid #009e4d;
+    border-radius: 5px;
+    padding: 10px;
+    background-color: #f7f7f7;
+    color: #13b95a;
+    cursor: pointer;
+    appearance: none;
+}
